# server_mil

./: .gitignore
Client/: client.cpp  client.ui  groupData.h
Server/: CMakeLists.txt  definesMil.h  executor.cpp  executor.h
